[project]
name = "breathwork"
version = "0.1.0"
description = "CLI/TUI breathing exercise tool for guided breath-hold routines with visual and audio feedback"
readme = "README.md"
authors = [
    { name = "Sebastian Steenssøe", email = "vildmedpap@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
breathwork = "breathwork.cli:app"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
